--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <a href="#experience" class="nav-link">Experience</a>
                 <a href="#education" class="nav-link">Education</a>
                 <a href="#certifications" class="nav-link">Certifications</a>
+                <a href="#projects" class="nav-link">Projects</a>
                 <a href="#skills" class="nav-link">Skills</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
@@ -243,18 +244,16 @@
                 <div class="cert-card">
                     <div class="cert-content-area">
                         <div class="cert-logo-container">
-                            <img src="images/logos/cisco.png" alt="CISCO Logo" class="cert-logo-img">
+                            <img src="images/logos/digitalent.png" alt="Digitalent Kominfo Logo" class="cert-logo-img">
                         </div>
-                        <h3 class="cert-title">Endpoint Security</h3>
-                        <p class="cert-issuer">CISCO Networking Academy</p>
+                        <h3 class="cert-title">Junior SOC Analyst</h3>
+                        <p class="cert-issuer">Digitalent Kominfo</p>
                     </div>
                     <div class="cert-buttons-container">
-                        <a href="https://drive.google.com/file/d/1M5p9MH0_jByFs1Jj19DA6TH2A-BrQhYX/view?usp=drive_link" target="_blank" class="cert-view-btn">
+                        <a href="https://drive.google.com/file/d/1DlQ0SK_Cl5XnMElavLLRejosGrV79kh8/view?usp=drive_link" target="_blank" class="cert-view-btn">
                             <i class="fas fa-eye"></i> View Certificate
                         </a>
-                        <a href="https://www.credly.com/badges/68eb28bc-2477-4f3f-b982-c373d77fd816" target="_blank" class="cert-validate-btn">
-                            <i class="fas fa-check-circle"></i> Validate Certificate
-                        </a>
+                        <div class="cert-button-spacer"></div>
                     </div>
                 </div>
                 <div class="cert-card">
@@ -296,16 +295,18 @@
                 <div class="cert-card">
                     <div class="cert-content-area">
                         <div class="cert-logo-container">
-                            <img src="images/logos/digitalent.png" alt="Digitalent Kominfo Logo" class="cert-logo-img">
+                            <img src="images/logos/cisco.png" alt="CISCO Logo" class="cert-logo-img">
                         </div>
-                        <h3 class="cert-title">Junior SOC Analyst</h3>
-                        <p class="cert-issuer">Digitalent Kominfo</p>
+                        <h3 class="cert-title">Endpoint Security</h3>
+                        <p class="cert-issuer">CISCO Networking Academy</p>
                     </div>
                     <div class="cert-buttons-container">
-                        <a href="https://drive.google.com/file/d/1DlQ0SK_Cl5XnMElavLLRejosGrV79kh8/view?usp=drive_link" target="_blank" class="cert-view-btn">
+                        <a href="https://drive.google.com/file/d/1M5p9MH0_jByFs1Jj19DA6TH2A-BrQhYX/view?usp=drive_link" target="_blank" class="cert-view-btn">
                             <i class="fas fa-eye"></i> View Certificate
                         </a>
-                        <div class="cert-button-spacer"></div>
+                        <a href="https://www.credly.com/badges/68eb28bc-2477-4f3f-b982-c373d77fd816" target="_blank" class="cert-validate-btn">
+                            <i class="fas fa-check-circle"></i> Validate Certificate
+                        </a>
                     </div>
                 </div>
                 <div class="cert-card">
@@ -323,6 +324,30 @@
                         <a href="https://www.credly.com/badges/f24e7ad1-532b-4640-b044-fc7c032c8ae7" target="_blank" class="cert-validate-btn">
                             <i class="fas fa-check-circle"></i> Validate Certificate
                         </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2 class="section-title">Projects</h2>
+            <div class="projects-content">
+                <div class="maintenance-notice">
+                    <div class="maintenance-icon">
+                        <i class="fas fa-tools"></i>
+                    </div>
+                    <h3>Under Maintenance</h3>
+                    <p>This section is currently being updated with my latest projects and developments.</p>
+                    <p>Please check back soon to see my portfolio of work!</p>
+                    <div class="maintenance-animation">
+                        <div class="loading-dots">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                     </div>
                 </div>
             </div>
