--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
     
+    <!-- Advanced Security Protection -->
+    <script>
+    (function(){var _0x1a2b3c={a:'F12',b:'keydown',c:'preventDefault',d:'contextmenu',e:'selectstart',f:'dragstart',g:'outerHeight',h:'innerHeight',i:'outerWidth',j:'innerWidth',k:'innerHTML',l:'location',m:'replace',n:'addEventListener',o:'ctrlKey',p:'shiftKey',q:'pathname',r:'includes'};var _0x4d5e6f=setInterval(function(){if(window[_0x1a2b3c.g]-window[_0x1a2b3c.h]>160||window[_0x1a2b3c.i]-window[_0x1a2b3c.j]>160){document.body[_0x1a2b3c.k]='<div style="position:fixed;top:0;left:0;width:100%;height:100%;background:#000;color:#f00;display:flex;align-items:center;justify-content:center;z-index:999999;font-size:2rem;font-family:Arial;">🔒 AKSES DEVELOPER TOOLS DIBLOKIR</div>';setTimeout(function(){window[_0x1a2b3c.l][_0x1a2b3c.m]('/')},2000)}},400);document[_0x1a2b3c.n](_0x1a2b3c.b,function(e){if(e.key===_0x1a2b3c.a||(e[_0x1a2b3c.o]&&e[_0x1a2b3c.p]&&(e.key==='I'||e.key==='J'||e.key==='C'))||(e[_0x1a2b3c.o]&&e.key==='U')){e[_0x1a2b3c.c]();return false}});[_0x1a2b3c.d,_0x1a2b3c.e,_0x1a2b3c.f].forEach(function(evt){document[_0x1a2b3c.n](evt,function(e){e[_0x1a2b3c.c]();return false})});var path=window[_0x1a2b3c.l][_0x1a2b3c.q];if(path[_0x1a2b3c.r]('/images/')||path[_0x1a2b3c.r]('/scripts/')||path[_0x1a2b3c.r]('/styles/')){window[_0x1a2b3c.l][_0x1a2b3c.m]('/')};window.console={log:function(){},clear:function(){},error:function(){},warn:function(){},info:function(){},debug:function(){}};Object.defineProperty(window,'console',{get:function(){return{log:function(){},clear:function(){},error:function(){},warn:function(){},info:function(){},debug:function(){}}},configurable:false});})();
+    </script>
+    
     <title>Much. Trie Harnanto - Portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/cert-styles.css">
-    <link rel="stylesheet" href="styles/security.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -471,6 +475,5 @@
     </footer>
 
     <script src="scripts/script.js"></script>
-    <script src="scripts/security.js"></script>
 </body>
 </html>
