--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
     
-    <title>Much. Trie Harnanto000000 - Portfolio</title>
+    <title>Much. Trie - Portfolio</title>
     <script src="scripts/security.js"></script>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/cert-styles.css">
