--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    <span class="gradient-text">Much. Trie Harnanto</span>
+                    <span class="gradient-text">Much</span>
                 </h1>
                 <p class="hero-subtitle">Cybersecurity Enthusiast & Web Developer</p>
                 <p class="hero-description">
