--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <main id="main-content">
             <div data-include="views/hero.html"></div>
             <div data-include="views/about.html"></div>
-            <div data-include="views/experience.html"></div>
+            <!--<div data-include="views/experience.html"></div>-->
             <!--<div data-include="views/education.html"></div>-->
             <div data-include="views/certifications.html"></div>
             <div data-include="views/projects.html"></div>
