--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <div id="app-root">
         <div data-include="views/nav.html"></div>
         <main id="main-content">
-            <div data-include="views/hero.html"></div>
-            <div data-include="views/about.html"></div>
+            <div data-include="views/ENG/hero.html"></div>
+            <div data-include="views/ENG/about.html"></div>
             <!--<div data-include="views/experience.html"></div>-->
             <!--<div data-include="views/education.html"></div>-->
-            <div data-include="views/certifications.html"></div>
-            <div data-include="views/projects.html"></div>
-            <div data-include="views/contact.html"></div>
+            <div data-include="views/ENG/certifications.html"></div>
+            <div data-include="views/ENG/projects.html"></div>
+            <div data-include="views/ENG/contact.html"></div>
         </main>
         <div data-include="views/footer.html"></div>
         <div data-include="views/modals.html"></div>
