--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         document.addEventListener('DOMContentLoaded', loadPartials);
     </script>
 
-    <script src="scripts/security.js"></script>
+    <!--<script src="scripts/security.js"></script>-->
     <script src="scripts/script.js"></script>
 </body>
 </html>
